--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,4 +14,4 @@ jobs:
       - run:
           name: "echo an env var that is part of our project"
           command: |
-            echo $yourname
+            echo $MY_ENV_VAR
